<?xml version="1.0"?>
<package>
 <name>tobii_eyetracking</name>
 <version>1.0.0</version>
 <description>
 TODO!
 </description>

 <license>GPLv3</license>

 <author email="rute.luz@tecnico.ulisboa.pt">Rute Luz</author>
 <maintainer email="rute.luz@tecnico.ulisboa.pt">Rute Luz</maintainer>

 <buildtool_depend>catkin</buildtool_depend>

 <build_depend>roscpp</build_depend>
 <build_depend>roscpp_serialization</build_depend>

 <run_depend>roscpp</run_depend>
 <run_depend>roscpp_serialization</run_depend>

</package>
